<resources>
    <string name="app_name">Task 08 - GUI Login y Registro</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="signIn">SIGN IN</string>


    <string name="sex">Sex</string>
    <string name="nationality">Nationality</string>
    <string name="hobbies">Hobbies</string>
    <string name="cv">CV</string>
    <string name="men">M</string>
    <string name="women">W</string>
    <string name="football">Football</string>
    <string name="tennis">Tennis</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
</resources>