<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/grey"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <!--GO BACK BUTTON-->
        <ImageButton
            android:id="@+id/imageBtnGoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/secondaryColor"
            android:contentDescription="@string/todo"
            android:src="@drawable/go_back_button"
            tools:ignore="SpeakableTextPresentCheck" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--USERNAME-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/email"
                    android:textColor="@color/white" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="40dp"
                    android:layout_span="2">

                    <EditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        tools:ignore="SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

            </TableRow>

            <!--PASSWORD-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/password"
                    android:textColor="@color/white" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="40dp"
                    android:layout_span="2"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:textColorHighlight="@color/primaryColor"
                        android:textColorHint="@color/primaryColor"
                        tools:ignore="SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <!--SEX-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/sex"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/radioButtonH"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/men"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/radioButtonM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="120dp"
                    android:text="@string/women"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

            </TableRow>

            <!--COUNTRY-->
            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:text="@string/nationality"
                    android:textColor="@color/white" />


                <Spinner
                    android:id="@+id/spinnerNationality"
                    style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="40dp"
                    android:layout_span="2"
                    android:backgroundTint="@color/primaryColor"
                    android:backgroundTintMode="screen"
                    android:textColor="@color/white" />
            </TableRow>

            <!--HOBBY-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/hobbies"
                    android:textColor="@color/white" />

                <CheckBox
                    android:id="@+id/checkBoxTennis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/tennis"
                    android:textColor="@color/white" />

                <CheckBox
                    android:id="@+id/checkBoxFootball"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:text="@string/football"
                    android:textColor="@color/white" />

            </TableRow>

            <!--CV-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/cv"
                    android:textColor="@color/white" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_span="2">
                    <EditText
                        android:id="@+id/editTextCV"
                        android:layout_width="match_parent"
                        android:layout_height="149dp"
                        android:autofillHints=""
                        android:background="@null"
                        android:gravity="top|start"
                        android:lines="10"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/white"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <!--Warning message-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_span="3"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/warning"
                    android:visibility="gone"/>
            </TableRow>

            <!--SIGN IN BUTTOM-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnSignIn"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_span="3"
                    android:backgroundTint="@color/primaryColor"
                    android:elevation="2dp"
                    android:text="@string/signIn"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:cornerRadius="5dp"
                    app:strokeColor="@color/white" />

            </TableRow>

        </TableLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>