<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="409dp"
            android:layout_height="729dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical"
            android:background="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">


            <!--LOGO-->
            <ImageView
                android:id="@+id/imageLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:src="@drawable/ic_launcher_foreground" />

            <!--USERNAME-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="70dp"
                android:layout_marginRight="40dp">

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/icon_account"
                    android:drawablePadding="10dp"
                    android:hint="@string/username"
                    android:textColor="@color/white"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--PASSWORD-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/icon_lock"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:textColor="@color/white"
                    android:textColorHint="@color/primaryColor"
                    android:textColorHighlight="@color/primaryColor"
                    android:importantForAutofill="no"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewWarning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="40dp"
                android:text=""
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="@color/warning"
                android:visibility="gone"/>

            <!--Text View Warning-->
            <TextView
                android:id="@+id/textViewResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/warning"
                android:visibility="gone"/>

            <!--BUTON LOGIN-->
            <Button
                android:id="@+id/btnLogin"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="65dp"
                android:layout_marginEnd="40dp"
                android:backgroundTint="@color/primaryColor"
                android:elevation="2dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="5dp"
                app:strokeColor="@color/white" />

            <!--BUTON SIGN IN-->
            <Button
                android:id="@+id/btnSignIn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:backgroundTint="@color/primaryColor"
                android:elevation="2dp"
                android:text="@string/signIn"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="5dp"
                app:strokeColor="@color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>